# ellipsoids_public

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
aepsy/: pyproject.toml
aepsy/expt/eLife_4d/: run_4d_expt.py  run_4d_expt_practice.py
aepsy/sim/: sim_adaptive_2d3d_interleaved.py  sim_adaptive_4d6d.py
aepsych/expt/eLife_4d/: run_4d_expt_practice.py
aepsych/sim/: sim_adaptive_4d6d.py
analysis/: gen_expt_trials.py
config/: hardcoded_paths_mac.json  hardcoded_paths_windows.json
dconfig/: config_pregenSobol.py
ellipsoids/: fit_4d_human.py  fit_6d_human.py  fit_MOCS.py  pyproject.toml
ellipsoids/analysis/: MOCS_thresholds.py  bin_pCorrect.py  color_thres.py  conf_interval.py  config_generator.py  cross_validation.py  data_validation.py  ellipses_tools.py  ellipsoids_tools.py  fallback_trial_strat.py  gen_expt_trials.py  model_performance.py  model_predictions_inCIELab.py  sim_trials.py  simulations_CIELab.py  trial_placement.py  trial_sequence.py  utils_communication.py  utils_load.py
ellipsoids/cieLab/: Isothreshold_ellipses_3slices_CIELab.py  Isothreshold_ellipses_isoluminant_CIELab.py  Isothreshold_ellipsoids_CIELab.py
ellipsoids/core/: chebyshev.py  geodesics.py  model_predictions.py  oddity_task.py  optim.py  utils.py  viz.py  wishart_process.py
ellipsoids/dconfig/: config_4Ddata.py  mocs_config_mixin.py
ellipsoids/eval/: comp_GegenfurtnerEllipses.py  comp_MacAdamEllipses.py  comp_modelpred_CIE_2D.py  comp_slope_corrcoef.py  eval_NBS_org_btst.py  eval_RTs.py  eval_btstCI_Wishart_atMOCS.py  eval_effects_decay_rate_summary.py  eval_hyperparams.py  eval_lapse_rate_MOCS_trials.py  eval_pC_polarAngle.py  eval_residuals.py  eval_thres_at_suprathres_refs.py  eval_trial_efficiency.py
ellipsoids/export/: export_data_csv.py  pregen_MOCS_trials_CIELab.py  pregen_MOCS_trials_W.py  pregen_Sobol.py
ellipsoids/fit/: fit_4d_human.py  fit_MOCS.py
ellipsoids/model_demo/: visualize_MC.py  visualize_chebyshev_basis.py  visualize_covariance_matrix_2D4D.py  visualize_covariance_matrix_3D6D.py
ellipsoids/networkDisk_tests/: recipient.py  sender.py
ellipsoids/plotting/: adaptive_sampling_plotting.py  color_spaces_plotting.py  compare_modelpreds.py  mocs_wishart_interactive_html.py  modelperf_plotting.py  sim_CIELab_plotting.py  trial_placement_nonadaptive_plotting.py  visualize_CI_Wishart_grid_2d.py  visualize_MOCS.py  visualize_bestfit_W.py  visualize_btstCI_Wishart_atMOCS.py  visualize_empirical_covariance_matrix_2D4D.py  visualize_stim_at_thresholds.py  visualize_trial_placement.py  wishart_plotting.py  wishart_predictions_plotting.py
ellipsoids/scripts/: download_osf_data.py
ellipsoids/sim/: sim_nonadaptive_fixedRef_CIELab.py  sim_nonadaptive_fixedRef_W.py  sim_nonadaptive_sobolRef_CIELab.py  sim_nonadaptive_sobolRef_W.py
ellipsoids/tests/regression/: make_baselines.py  test_regression.py
eval/: comp_GegenfurtnerEllipses.py  comp_modelpred_CIE_2D.py  eval_hyperparams.py  eval_trial_efficiency.py
export/: pregen_Sobol.py
plotting/: visualize_CI_Wishart_grid_2d.py  visualize_btstCI_Wishart_atMOCS.py  wishart_predictions_plotting.py
tests/: conftest.py  test_oddity_task.py
unity/: Calibration_changeSurfaceColor_3blobs.cs  Expt_adaptation.cs  Expt_color_discrimination.cs  Expt_suprathres.cs  HelperClasses.cs
