[project]
name = "ellipsoids-elife2025"
version = "0.1.0"
requires-python = ">=3.12"
description = "Wishart Process Psychophysical Model — code accompanying Hong et al. (2025) eLife"

# Core scientific dependencies.  JAX note: the base 'jax' package installs
# the CPU-only build.  For GPU support install jax[cuda12] separately; see
# https://jax.readthedocs.io/en/latest/installation.html
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "imageio",
    "pandas",
    "dill",
    "colour-science",
    "scikit-image",
    "shapely",
    # JAX ecosystem — required by core/ modules
    "optax",       # core/optim.py
    "diffrax",     # core/geodesics.py
    "optimistix",  # core/geodesics.py
    "evosax",      # core/geodesics.py
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# jax_enable_x64 must be set before JAX initialises; conftest.py handles this.

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E402",  # module-level import not at top — common in research scripts that
             # manipulate sys.path before importing project modules
]

# ---------------------------------------------------------------------------
# Packaging — expose every functional subdirectory as an importable package
# so that 'pip install -e .' makes 'from core import ...' etc. work anywhere.
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = [
    "analysis*",
    "cieLab*",
    "core*",
    "eval*",
    "export*",
    "model_demo*",
    "plotting*",
    "sim*",
]
