[project]
name = "ellipsoids-elife2025"
version = "0.1.0"
requires-python = ">=3.12"
description = "Wishart Process Psychophysical Model — code accompanying Hong et al. (2025) eLife"

# Core scientific dependencies.  JAX note: the base 'jax' package installs
# the CPU-only build.  For GPU support install jax[cuda12] separately; see
# https://jax.readthedocs.io/en/latest/installation.html
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "scipy",
    "matplotlib",
    "plotly",
    "imageio",
    "pandas",
    "dill",
    "colour-science",
    "scikit-image",
    "shapely",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest"]

# ---------------------------------------------------------------------------
# Packaging — expose every functional subdirectory as an importable package
# so that 'pip install -e .' makes 'from core import ...' etc. work anywhere.
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = [
    "analysis*",
    "cieLab*",
    "core*",
    "eval*",
    "export*",
    "model_demo*",
    "plotting*",
    "sim*",
]
